--- a/protected/Layouts/Index.html
+++ b/protected/Layouts/Index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Minimal web-application based on T4 framework</title>
-  {{ publishCss() }}
+    <meta charset="UTF-8">
+    <title>{{ app.config.project.title }}</title>
+    <link rel="stylesheet" href="{{ asset('/Layouts/css/site.css') }}">
 </head>
 <body>
-{% block content %}{% endblock %}
+    <div id="container">
+        <div id="header">
+            Фан-сайт, посвящённый группе No Doubt
+        </div>
+        <div id="menu">
+            <p>Меню</p>
+            <ul>
+                <li><a href="/">Главная</a></li>
+                <li><a href="/index/band">Состав группы</a></li>
+                <li><a href="/admin/default">Админ-панель</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
+        <div id="clear">
+
+        </div>
+    </div>
+    <div id="footer">
+        <a href="https://github.com/customer41/php2.t4">&copy; 2016, Александр Попов</a>
+        This project was created using framework T4
+    </div>
 {{ publishJs() }}
 </body>
 </html>
