fixed some bugs and added exceptions 404

--- a/protected/Layouts/Index.html
+++ b/protected/Layouts/Index.html
@@ -11,7 +11,7 @@
             Фан-сайт, посвящённый группе No Doubt
         </div>
         <div id="menu">
-            <p>Меню</p>
+            <p>Меню:</p>
             <ul>
                 <li><a href="/">Главная</a></li>
                 <li><a href="/index/band">Состав группы</a></li>
