--- a/protected/Templates/Admin/Add.html
+++ b/protected/Templates/Admin/Add.html
@@ -1,6 +1,7 @@
 {% extends 'Index.html' %}
 
 {% block content %}
+    <p>Добавить новость:</p>
     <form action="/admin/add" method="post">
         <label for="title">Заголовок новости: </label><br>
         <input type="text" id="title" name="title"><br>
@@ -8,4 +9,5 @@
         <textarea id="text" name="text" cols="50" rows="10"></textarea><br>
         <input type="submit" value="Добавить новость">
     </form>
+    <br>
 {% endblock %}
