--- a/protected/Layouts/css/site.css
+++ b/protected/Layouts/css/site.css
@@ -40,16 +40,23 @@ body {
 #menu {
     width: 200px;
     float: left;
+    padding-left: 5px;
+    padding-top: 5px;
 }
 
 #content {
     margin-left: 200px;
+    padding: 5px;
 }
 
 #footer {
     margin-top: -100px;
     text-align: center;
     line-height: 100px;
+}
+
+#clear {
+    clear: both;
 }
 
 img {
