--- a/protected/Templates/Admin/Default.html
+++ b/protected/Templates/Admin/Default.html
@@ -1,15 +1,20 @@
 {% extends 'Index.html' %}
 
 {% block content %}
-    {% for item in items %}
-        <h2><a href="/admin/news?id={{ item.getPk() }}">{{ item.title }}</a></h2>
-        <p>{{ item.text }}... <a href="/admin/news?id={{ item.getPk() }}">читать&nbsp;далее</a></p>
-        <small>Дата публикации: {{ item.time }}</small>
-        <p>
-            <a href="/admin/add" class="button">Добавить</a>
-            <a href="/admin/edit?id={{ item.getPk() }}" class="button">Редактировать</a>
-            <a href="/admin/delete?id={{ item.getPk() }}" class="button">Удалить</a>
-        </p>
-        <hr>
-    {% endfor %}
+    <p>Последние новости:</p>
+    {% if 0 != count %}
+        {% for item in items %}
+            <h2><a href="/admin/news?id={{ item.getPk() }}">{{ item.title }}</a></h2>
+            <p>{{ item.text }}... <a href="/admin/news?id={{ item.getPk() }}">читать&nbsp;далее</a></p>
+            <small>Дата публикации: {{ item.time }}</small>
+            <p>
+                <a href="/admin/add" class="button">Добавить</a>
+                <a href="/admin/edit?id={{ item.getPk() }}" class="button">Редактировать</a>
+                <a href="/admin/delete?id={{ item.getPk() }}" class="button">Удалить</a>
+            </p>
+            <hr>
+        {% endfor %}
+    {% else %}
+        <p>Пока новостей нет</p>
+    {% endif %}
 {% endblock %}
