--- a/protected/Templates/Admin/Edit.html
+++ b/protected/Templates/Admin/Edit.html
@@ -1,6 +1,7 @@
 {% extends 'Index.html' %}
 
 {% block content %}
+    <p>Редактировать новость:</p>
     <form action="/admin/edit?id={{ item.getPk() }}" method="post">
         <label for="title">Заголовок новости: </label><br>
         <input type="text" id="title" name="title" value="{{ item.title }}"><br>
@@ -8,4 +9,5 @@
         <textarea id="text" name="text" cols="50" rows="10">{{ item.text }}</textarea><br>
         <input type="submit" value="Редактировать новость">
     </form>
+    <br>
 {% endblock %}
