--- a/protected/Templates/Index/Default.html
+++ b/protected/Templates/Index/Default.html
@@ -1,10 +1,15 @@
 {% extends 'Index.html' %}
 
 {% block content %}
-    {% for item in items %}
-        <h2><a href="/index/news?id={{ item.getPk() }}">{{ item.title }}</a></h2>
-        <p>{{ item.text }}... <a href="/index/news?id={{ item.getPk() }}">читать&nbsp;далее</a></p>
-        <small>Дата публикации: {{ item.time }}</small>
-        <hr>
-    {% endfor %}
+    <p>Последние новости:</p>
+    {% if 0 != count %}
+        {% for item in items %}
+            <h2><a href="/index/news?id={{ item.getPk() }}">{{ item.title }}</a></h2>
+            <p>{{ item.text }}... <a href="/index/news?id={{ item.getPk() }}">читать&nbsp;далее</a></p>
+            <small>Дата публикации: {{ item.time }}</small>
+            <hr>
+        {% endfor %}
+    {% else %}
+        <p>Пока новостей нет</p>
+    {% endif %}
 {% endblock %}
